patches/custom-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: custom-pod-snapshot-agent
  namespace: default
  labels:
    app: custom-pod-snapshot-agent
spec:
  selector:
    matchLabels:
      app: custom-pod-snapshot-agent
  template:
    metadata:
      labels:
        app: custom-pod-snapshot-agent
    spec:
      serviceAccountName: custom-pod-snapshot-agent-sa
      hostNetwork: true
      hostPID: true
      nodeSelector:
        sandbox.gke.io/runtime: gvisor
      tolerations:
      - key: sandbox.gke.io/runtime
        operator: Equal
        value: gvisor
        effect: NoSchedule
      - effect: NoSchedule
        operator: Exists
      containers:
      - name: gps-agent
        image: <YOUR_AGENT_IMAGE>
        imagePullPolicy: Always
        command: ["/bin/agent"]
        args:
        - --log-level=info
        - --support-psmt=true
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /dev
          name: dev
        - mountPath: /etc/srv/kubernetes/pki
          name: srv
        - mountPath: /home/kubernetes/bin
          name: kubernetes-bin
          readOnly: true
        - mountPath: /var/lib/kubelet
          mountPropagation: HostToContainer
          name: kubelet-dir
        - mountPath: /host/run
          name: host-run-dir
        - mountPath: /host/var/lib/podsnapshots
          name: podsnapshot-dir
        - mountPath: /host/home/containerd/usr/local/sbin/runsc
          name: runsc-bin
          readOnly: true
        - mountPath: /var/run/token_broker/ksa
          name: token-broker-ksa
          readOnly: true
        - mountPath: /var/run/token_broker/adc
          name: token-broker-adc
          readOnly: true
      volumes:
      - hostPath:
          path: /etc/srv/kubernetes/pki
          type: Directory
        name: srv
      - hostPath:
          path: /dev
          type: Directory
        name: dev
      - hostPath:
          path: /home/kubernetes/bin
          type: Directory
        name: kubernetes-bin
      - hostPath:
          path: /var/lib/kubelet
          type: Directory
        name: kubelet-dir
      - hostPath:
          path: /run
          type: Directory
        name: host-run-dir
      - hostPath:
          path: /var/lib/podsnapshots
          type: DirectoryOrCreate
        name: podsnapshot-dir
      - hostPath:
          path: /home/containerd/usr/local/sbin/runsc
          type: File
        name: runsc-bin
      - name: token-broker-ksa
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: https://container.googleapis.com/v1/projects/<YOUR_PROJECT_NUMBER>/locations/<YOUR_CLUSTER_ZONE>/clusters/<YOUR_CLUSTER_NAME>/generateClusterNodeAgentToken
              expirationSeconds: 3600
              path: token
      - emptyDir: {}
        name: token-broker-adc
