patches/node-patcher-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-patcher
  namespace: kube-system
  labels:
    k8s-app: node-patcher
spec:
  selector:
    matchLabels:
      name: node-patcher
  template:
    metadata:
      labels:
        name: node-patcher
    spec:
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        sandbox.gke.io/runtime: gvisor
      tolerations:
        - key: sandbox.gke.io/runtime
          operator: Equal
          value: gvisor
          effect: NoSchedule
      containers:
        - name: diagnostician
          image: alpine:3.18
          securityContext:
            privileged: true
          command:
            - sh
            - -c
            - "apk add --no-cache util-linux && sleep infinity"
      volumes:
        - name: host-bin
          hostPath:
            path: /home/containerd/opt/containerd/bin
        - name: host-run
          hostPath:
            path: /run/containerd
